Ensure that too long of a skill doesn't cause a crash

--- a/src/styles/components/AdaptText.scss
+++ b/src/styles/components/AdaptText.scss
@@ -1,5 +1,6 @@
 .adapt-text {
   &__skills {
     font-family: $font-family-monospace;
+    overflow: hidden;
   }
 }
